Fixed overflow on collapsed app bar.

--- a/src/components/AppBar.scss
+++ b/src/components/AppBar.scss
@@ -45,7 +45,8 @@
     }
 }
 .mdc-top-app-bar--short {
-    transition: width 250ms $mdc-animation-standard-curve-timing-function, box-shadow 250ms $mdc-animation-standard-curve-timing-function;
+    overflow: hidden;
+    transition: width 250ms $mdc-animation-standard-curve-timing-function, border-radius 100ms $mdc-animation-standard-curve-timing-function, box-shadow 250ms $mdc-animation-standard-curve-timing-function;
     .short-logo {
         overflow: hidden;
         max-width: 0;
